# tmp.aws

./: architecture-design.md  security_agent_resources.md
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/build-and-test/: build-and-test-summary.md  build-instructions.md  integration-test-instructions.md  performance-test-instructions.md  unit-test-instructions.md
aidlc-docs/construction/mealprep/code/: code-summary.md
aidlc-docs/construction/mealprep/functional-design/: business-logic-model.md  business-rules.md  domain-entities.md
aidlc-docs/construction/plans/: mealprep-code-generation-plan.md  mealprep-functional-design-plan.md
aidlc-docs/inception/application-design/: application-design.md  component-dependency.md  component-methods.md  components.md  services.md
aidlc-docs/inception/plans/: application-design-clarification-questions.md  application-design-plan.md  execution-plan.md
aidlc-docs/inception/requirements/: requirement-analysis-outcome.md  requirement-verification-questions.md  requirements-clarification-questions.md  requirements.md
mealprep/: Cargo.toml  README.md
mealprep/src/: app.rs  grocery.rs  lib.rs  main.rs  meal_planner.rs  models.rs  recipe_store.rs  scaling.rs  storage.rs  ui.rs  units.rs
mealprep/tests/: grocery_pbt.proptest-regressions  grocery_pbt.rs  models_pbt.proptest-regressions  models_pbt.rs  scaling_pbt.rs  units_pbt.rs
